[BF] issue_1 textarea autosize jumps

--- a/src/app/words-app/components/area/area.component.scss
+++ b/src/app/words-app/components/area/area.component.scss
@@ -1,16 +1,23 @@
 .textarea-input {
+  overflow: hidden;
   width: 100%;
+    
+  background-attachment: local;
   background: url(/assets/img/lines.png) repeat-y, url(/assets/img/paper.png) repeat;
   color:#222;
   background-color: #62add6;
+  
   font-size: 24px;
   line-height:40px;
   padding: 45px 100px 34px;
+  
   -webkit-border-radius:12px;
   border-radius:12px;
+  
   -webkit-box-shadow: 0 2px 14px #000;
   box-shadow: 0 2px 14px #000;
+  
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
-  background-attachment: local;
+
 }
